Fixed navigation menu hidden on mobile

--- a/themes/si8/less/custom/header.less
+++ b/themes/si8/less/custom/header.less
@@ -162,6 +162,10 @@
     float: none;
     padding: 2px;
 
+    li:first-child {
+      display: none;
+    }
+
     a {
       color: #fff;
       font-family: @font-footer;
